# python-development-environment

./: README.md  docker-compose.yml  install-dev-tools.sh  sample.http
.devcontainer/: devcontainer.json  sample.env
.docker/: Dockerfile  docker-compose.yml
app/: main.py  sample.py  uwsgi.ini
app/api/: route.py
app/api/responses/: success.py
app/controllers/: __init__.py  goodbye.py  hello_world.py
pip/: pyproject.toml
tests/: conftest.py  test_hello_world.py  test_sample.py
tests/controllers/: test_goodbye.py
work/: sample.ipynb
