[tool.poetry]
name = "python3"
version = "0.1.0"
description = ""
authors = ["oq-Yuki-op"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
flask_api = "^2.0"
Flask-RESTful = "^0.3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
autopep8 = "^1.5.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
