[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"
SQLAlchemy = "^1.3.18"
alembic = "^1.4.2"
factory-boy = "^2.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
autopep8 = "^1.5.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
